# GarterSnake

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  formatting.yml  tests.yml
gartersnake/: __init__.py  conda.py  dependencies.py  missing.py  pip.py  version.py  windows.py
tests/: test_conda.py  test_dependencies.py  test_installed.py  test_missing.py  test_windows.py
