[tool.poetry]
name = "gartersnake"
version = "0.0.0"
description = "helpers for setuptools"
authors = ["zacharyburnett <zachary.r.burnett@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.6"
pipwin = { version = "*", optional = true }

[tool.poetry.extras]
testing = ["pytest", "pytest-cov", "pytest-xdist"]
development = ["flake8", "isort", "oitnb"]
documentation = ["m2r2", "sphinx", "sphinx-rtd-theme"]
