[tool.poetry]
name = "gartersnake"
version = "0.0.0"
description = "helpers for setuptools"
authors = ["zacharyburnett <zachary.r.burnett@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = "^3.6"
