[metadata]
name = gartersnake
authors = ["zacharyburnett <zachary.r.burnett@gmail.com>"]
description = helpers for setuptools
long_description = file: README.md
license = MIT
url = https://github.com/zacharyburnett/GarterSnake.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
