[metadata]
name = gartersnake
authors = ["zacharyburnett <zachary.r.burnett@gmail.com>"]
description = helpers for `setup.py`
long_description = file: README.md
long_description_content_type='text/markdown',
license = MIT
url = https://github.com/zacharyburnett/GarterSnake.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
